03-gateway/mock/mock-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mock
  namespace: lucky-number-app
spec:
  selector:
    app: mock
  ports:
  - targetPort: 80
    port: 80
    protocol: TCP
