03-gateway/mock/destinationrule.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: generator
  namespace: lucky-number-app
spec:
  host: generator.lucky-number-app.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
